markdown-pages/zh/tidb/release-3.0/sql-statements/sql-statement-create-table-like.md
---
title: CREATE TABLE LIKE
summary: TiDB 数据库中 CREATE TABLE LIKE 的使用概况。
aliases: ['/docs-cn/v3.0/sql-statements/sql-statement-create-table-like/','/docs-cn/v3.0/reference/sql/statements/create-table-like/']
---

# CREATE TABLE LIKE

`CREATE TABLE LIKE` 语句用于复制已有表的定义，但不复制任何数据。

## 语法图

**CreateTableStmt:**

![CreateTableStmt](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/CreateTableStmt.png)

**LikeTableWithOrWithoutParen:**

![LikeTableWithOrWithoutParen](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/LikeTableWithOrWithoutParen.png)

**TableName:**

![TableName](https://docs-download.pingcap.com/media/images/docs-cn/sqlgram/TableName.png)

## 示例


```sql
CREATE TABLE t1 (a INT NOT NULL);
```

```
Query OK, 0 rows affected (0.13 sec)
```


```sql
INSERT INTO t1 VALUES (1),(2),(3),(4),(5);
```

```
Query OK, 5 rows affected (0.02 sec)
Records: 5  Duplicates: 0  Warnings: 0
```


```sql
SELECT * FROM t1;
```

```
+---+
| a |
+---+
| 1 |
| 2 |
| 3 |
| 4 |
| 5 |
+---+
5 rows in set (0.00 sec)
```


```sql
CREATE TABLE t2 LIKE t1;
```

```
Query OK, 0 rows affected (0.10 sec)
```


```sql
SELECT * FROM t2;
```

```
Empty set (0.00 sec)
```

## MySQL 兼容性

`CREATE TABLE LIKE` 语句与 MySQL 完全兼容。如发现任何兼容性差异，请在 GitHub 上提交 [issue](https://github.com/pingcap/tidb/issues/new/choose)。

## 另请参阅

* [CREATE TABLE](/sql-statements/sql-statement-create-table.md)
* [SHOW CREATE TABLE](/sql-statements/sql-statement-show-create-table.md)
